# BoundaryTopographySolver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
applications/: CMakeLists.txt  advection_problem.cc  advection_problem.prm  buoyant_rotating_topography_problem.cc  buoyant_rotating_topography_problem.prm  buoyant_rotating_topography_problem_perturbed.cc  buoyant_rotating_topography_problem_perturbed.prm  buoyant_topography_problem.cc  buoyant_topography_problem.prm  buoyant_topography_problem_perturbed.cc  buoyant_topography_problem_perturbed.prm  cavity_problem.cc  cavity_problem.prm  cavity_problem_parallel.cc  magnetic_diffusion_l_shape.cc  magnetic_induction_problem.cc  rotating_cavity_problem.cc  rotating_topography_problem.cc  rotating_topography_problem.prm  topography_mesh.cc  topography_problem.cc  topography_problem.prm  topography_problem_perturbed.cc  topography_problem_perturbed.prm  viscous_buoyant_topography_problem.cc  viscous_buoyant_topography_problem.prm  viscous_topography_problem.cc  viscous_topography_problem.prm
documentation/: Doxyfile  main.tex  mainpage.txt  mathjax_macros.js  text.tex
include/: advection_assembly_data.h  advection_options.h  advection_problem.h  advection_solver.h  angular_velocity.h  assembly_base_data.h  assembly_data.h  assembly_functions.h  base.h  block_schur_preconditioner.h  boundary_conditions.h  buoyant_hydrodynamic_assembly_data.h  buoyant_hydrodynamic_options.h  buoyant_hydrodynamic_problem.h  buoyant_hydrodynamic_solver.h  equation_data.h  evaluation_base.h  evaluation_boundary_traction.h  evaluation_stabilization.h  grid_factory.h  hydrodynamic_assembly_data.h  hydrodynamic_options.h  hydrodynamic_postprocessor.h  hydrodynamic_problem.h  hydrodynamic_solver.h  legacy_assembly_base_data.h  linear_algebra_container.h  magnetic_induction_assembly_data.h  magnetic_induction_options.h  magnetic_induction_problem.h  magnetic_induction_solver.h  magnetic_postprocessor.h  parameters.h  parameters__.h  postprocessor.h  postprocessor_base.h  solver.h  solver_base.h  stabilization_flags.h
source/: CMakeLists.txt  CMakeLists.txt.orig  advection_assembly_data.cc  advection_options.cc  advection_problem.cc  angular_velocity.cc  assemble_system.cc  assembly_base_data.cc  assembly_data.cc  assembly_functions.cc  block_schur_preconditioner.cc  boundary_conditions.cc  buoyant_hydrodynamic_assembly_data.cc  buoyant_hydrodynamic_options.cc  buoyant_hydrodynamic_problem.cc  entropy_viscosity.cc  equation_data.cc  evaluation_boundary_traction.cc  evaluation_stabilization.cc  grid_factory.cc  hydrodynamic_assembly_data.cc  hydrodynamic_options.cc  hydrodynamic_postprocessor.cc  hydrodynamic_problem.cc  legacy_assembly_base_data.cc  linear_algebra_container.cc  linear_solver.cc  local_assemble.cc  magnetic_induction_assembly_data.cc  magnetic_induction_options.cc  magnetic_induction_problem.cc  magnetic_postprocessor.cc  make_grid.cc  newton_iteration.cc  parameters.cc  parameters__.cc  postprocessing.cc  postprocessor.cc  postprocessor_base.cc  setup.cc  (+2 more)
source/advection_solver/: advection_solver.cc  apply_boundary_conditions.cc  assemble_local_boundary.cc  assemble_rhs.cc  assemble_rhs_local.cc  assemble_system.cc  assemble_system_local.cc  setup.cc  stabilization.cc
source/buoyant_hydrodynamic_solver/: apply_boundary_conditions.cc  assemble_rhs.cc  assemble_rhs_local.cc  assemble_system.cc  assemble_system_local.cc  assembly_data.cc  buoyant_hydrodynamic_solver.cc  entropy_viscosity.cc  setup.cc  stabilization.cc
source/hydrodynamic_solver/: apply_boundary_conditions.cc  assemble_local_boundary.cc  assemble_rhs.cc  assemble_rhs_local.cc  assemble_system.cc  assemble_system_local.cc  assembly_data.cc  hydrodynamic_solver.cc  setup.cc
source/magnetic_induction_solver/: apply_boundary_conditions.cc  assemble_rhs.cc  assemble_rhs_local.cc  assemble_system.cc  assemble_system_local.cc  magnetic_induction_solver.cc  setup.cc
source/solver_base/: apply_constraints.cc  copy_local_to_global.cc  refine_mesh.cc  setup.cc  solve_linear_system.cc  solver_base.cc
tests/applications/: CMakeLists.txt  cavity_problem.output  cavity_problem.prm
tests/applications/00/: CMakeLists.txt  cavity_problem.output
tests/applications/01/: viscous_topography_problem.output
tests/applications/02/: CMakeLists.txt  advection_problem.output
tests/applications/advection_problem/: test01.output  test01.prm
tests/applications/buoyant_topography_problem/: CMakeLists.txt  test03.output  test03.prm
tests/basic_tests/: CMakeLists.txt  assembly_print_test.cc  assembly_print_test.output  boundary_conditions.cc  boundary_conditions.output  container_assembly_print_test.cc  container_assembly_print_test.output  container_assembly_residual_test.cc  container_assembly_residual_test.output  container_block_test.cc  container_block_test_parallel.cc  container_block_test_parallel.mpirun=1.output  container_residual_test.cc  container_residual_test.output  container_residual_test_parallel.cc  container_residual_test_parallel.mpirun=1.output  linear_algebra_container.cc  linear_algebra_container.output  linear_algebra_container_01.cc  linear_algebra_container_01.output  linear_algebra_container_02.cc  navier_stokes_augmented_preconditioner_test.cc  navier_stokes_augmented_preconditioner_test.output  stabilization_flags_test.cc  stabilization_flags_test.output  stokes_preconditioner_test.cc  stokes_preconditioner_test.output
(+48 files in other folders)
